crates/solidity-v2/testing/snapshots/cst_output/EventDefinition/no_parens/generated/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Error: Unexpected Semicolon. One of OpenParen was expected
   ╭─[ crates/solidity-v2/testing/snapshots/cst_output/EventDefinition/no_parens/input.sol:2:14 ]
   │
 2 │ event MyEvent;
   │              ┬  
   │              ╰── Error occurred here.
───╯
